[package]
name = "blog-finder"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
select = "0.4.3"
clap = { version = "2.33.0", features = ["yaml"] }
crossbeam-channel = "0.4.0"
url = "2.1.1"

